# stonks

./: Cargo.toml  README.md
resources/test/: mo.json  wk.json
src/: main.rs  parse.rs
