[package]
name = "stonks"
version = "0.1.0"
authors = ["zhuch-iv <zhuch.dev@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.3"

anyhow = "1.0"
structopt = "0.3"

chrono = "0.4"

futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", features = ["json"] }
